# django-email-users

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  conftest.py  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  setup.py  tox.ini
example/example/: settings.py
src/users/: admin.py  apps.py  forms.py  models.py
src/users/migrations/: 0001_initial.py  0002_alter_user_id.py
tests/: test_forms.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_auto_update_email_groups_last_login.py  0003_remove_user_title.py
users/south_migrations/: 0001_initial.py  0002_auto__chg_field_user_title.py
