[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-email-users"
dynamic = ["version"]
description = "Stock user app but without usernames"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD License"}
authors = [
    { name = "Ben Lopatin", email = "ben@benlopatin.com" },
]
keywords = [
    "django-email-users",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bennylope/django-email-users"

[project.optional-dependencies]
tests = [
    "pytest>=6.0",
    "coverage",
    "pytest-django>=3.0.0",
    "pytest-cov>=2.4.0",
]
linting = [
    "flake8",
    "isort",
]

[tool.hatch.version]
path = "src/users/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src/users"]
packages = ["src/users"]

[tool.hatch.build.targets.sdist]
include = [
    "src/users",
]
